--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,7 @@ html
   head
     title= title
     link(rel="stylesheet", href="/stylesheet.bundle.css")
+    include ./includes/favicon.jade
   body
     block content
     block pagescript
