--- a/frontend/stylesheets/configuration.scss
+++ b/frontend/stylesheets/configuration.scss
@@ -5,6 +5,8 @@
     padding: 30px;
 
     > h1 {
+      margin-bottom: 30px;
+
       > i {
         color: $primary-green;
         margin-right: 10px;
@@ -24,6 +26,7 @@
         right: 1em;
         top: 1em;
         cursor: pointer;
+        pointer-events: none;
       }
 
       > select {
@@ -43,6 +46,8 @@
       margin-left: 30px;
 
       > li {
+        @include x-user-select;
+
         display: inline-block;
         color: $primary-gray;
         font-weight: bold;
@@ -60,6 +65,8 @@
     }
 
     .channels-list {
+      margin-bottom: 20px;
+
       > li {
         font-size: 16px;
         display: table;
@@ -125,17 +132,6 @@
       > .actions {
         @include flexbox;
         @include justify-content(flex-end);
-
-        > button {
-          padding: 15px 20px;
-          background-color: $primary-green;
-          border: 1px solid #1E7433;
-          border-bottom: 2px solid #1E7433;
-          border-radius: 5px;
-          font-size: 18px;
-          color: #FFFFFF;
-          cursor: pointer;
-        }
       }
     }
   }
