--- a/public/stylesheet.bundle.css
+++ b/public/stylesheet.bundle.css
@@ -2101,6 +2101,16 @@ p {
   margin: 0;
   line-height: 1.5em; }
 
+button.msi {
+  padding: 15px 20px;
+  background-color: #3BC363;
+  border: 1px solid #1E7433;
+  border-bottom: 2px solid #1E7433;
+  border-radius: 5px;
+  font-size: 18px;
+  color: #FFFFFF;
+  cursor: pointer; }
+
 header.main {
   display: -webkit-flex;
   display: -moz-flex;
@@ -2287,7 +2297,7 @@ footer {
           height: 13px;
           margin-right: 20px; }
     #landing-container > section.top > .content > p {
-      max-width: 1000px;
+      max-width: 800px;
       font-size: 32px;
       text-align: center; }
 
@@ -2307,12 +2317,12 @@ footer {
   padding: 30px; }
   #landing-container > section.features > .slack-window {
     margin: 0 30px 10px 0;
-    width: 660px;
-    height: 491px;
+    width: 573.91304px;
+    height: 426.95652px;
     background-image: url("/images/SlackWindow@2x.png");
     background-size: cover; }
   #landing-container > section.features > .description {
-    width: 660px;
+    width: 573.91304px;
     padding-top: 3px; }
     #landing-container > section.features > .description > h1 {
       font-size: 32px;
@@ -2361,9 +2371,11 @@ footer {
   max-width: 800px;
   margin: 0 auto;
   padding: 30px; }
-  #configuration-container > .content > h1 > i {
-    color: #3BC363;
-    margin-right: 10px; }
+  #configuration-container > .content > h1 {
+    margin-bottom: 30px; }
+    #configuration-container > .content > h1 > i {
+      color: #3BC363;
+      margin-right: 10px; }
   #configuration-container > .content .select {
     position: relative;
     display: inline-block; }
@@ -2375,7 +2387,8 @@ footer {
       position: absolute;
       right: 1em;
       top: 1em;
-      cursor: pointer; }
+      cursor: pointer;
+      pointer-events: none; }
     #configuration-container > .content .select > select {
       -webkit-appearance: none;
       -moz-appearance: none;
@@ -2390,6 +2403,11 @@ footer {
     display: inline-block;
     margin-left: 30px; }
     #configuration-container > .content .days-list > li {
+      -webkit-touch-callout: none;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
       display: inline-block;
       color: #CBD0CD;
       font-weight: bold;
@@ -2399,21 +2417,23 @@ footer {
         margin-right: 15px; }
       #configuration-container > .content .days-list > li.selected {
         color: #3BC363; }
-  #configuration-container > .content .channels-list > li {
-    font-size: 16px;
-    display: table;
-    border-radius: 5px;
-    padding: 5px;
-    cursor: pointer; }
-    #configuration-container > .content .channels-list > li:hover {
-      background-color: #F6F5F2; }
-    #configuration-container > .content .channels-list > li > i {
-      margin-right: 10px;
-      color: #CBD0CD; }
-      #configuration-container > .content .channels-list > li > i.invited {
-        color: #3BC363; }
-      #configuration-container > .content .channels-list > li > i.uninvited {
-        color: #FFC202; }
+  #configuration-container > .content .channels-list {
+    margin-bottom: 20px; }
+    #configuration-container > .content .channels-list > li {
+      font-size: 16px;
+      display: table;
+      border-radius: 5px;
+      padding: 5px;
+      cursor: pointer; }
+      #configuration-container > .content .channels-list > li:hover {
+        background-color: #F6F5F2; }
+      #configuration-container > .content .channels-list > li > i {
+        margin-right: 10px;
+        color: #CBD0CD; }
+        #configuration-container > .content .channels-list > li > i.invited {
+          color: #3BC363; }
+        #configuration-container > .content .channels-list > li > i.uninvited {
+          color: #FFC202; }
   #configuration-container > .content .themes-list > h1 {
     text-align: center;
     margin-bottom: 30px; }
@@ -2457,15 +2477,6 @@ footer {
     -webkit-justify-content: flex-end;
     -moz-justify-content: flex-end;
     justify-content: flex-end; }
-    #configuration-container > .content .themes-list > .actions > button {
-      padding: 15px 20px;
-      background-color: #3BC363;
-      border: 1px solid #1E7433;
-      border-bottom: 2px solid #1E7433;
-      border-radius: 5px;
-      font-size: 18px;
-      color: #FFFFFF;
-      cursor: pointer; }
 
 #configuration-container > footer {
   border-top: 1px solid #CBD0CD; }
