added logout link

--- a/frontend/stylesheets/_header.scss
+++ b/frontend/stylesheets/_header.scss
@@ -27,4 +27,13 @@ header.main {
     }
   }
 
+  > nav {
+    font-size: $regular-font-size;
+
+    a {
+      text-decoration: none;
+      color: #FFFFFF;
+    }
+  }
+
 }
