--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,9 +2,9 @@ doctype html
 html
   head
     title= title
-    link(rel="stylesheet", href="/stylesheet.bundle.css")
+    link(rel="stylesheet", href="/bundles/stylesheet.bundle.css")
     include ./includes/favicon.jade
   body
     block content
     block pagescript
-    script(type="text/javascript", src="/javascript.bundle.js")
+    script(type="text/javascript", src="/bundles/javascript.bundle.js")
