added pretty url for configuration page

--- a/frontend/stylesheets/configuration.scss
+++ b/frontend/stylesheets/configuration.scss
@@ -24,7 +24,7 @@
         color: $primary-green;
         position: absolute;
         right: 1em;
-        top: 1em;
+        top: 30.5%;
         cursor: pointer;
         pointer-events: none;
       }
