--- a/frontend/stylesheets/_header.scss
+++ b/frontend/stylesheets/_header.scss
@@ -4,9 +4,9 @@ header.main {
   @include align-items(center);
   @include gradient-horizontal(#2BAA4C, #3DA44C);
 
-  font-size: $primary-font-size;
+  font-size: 24px;
   color: #FFFFFF;
-  padding: 30px;
+  padding: 20px;
 
   > .logo {
     @include flexbox;
