--- a/frontend/stylesheets/_modal.scss
+++ b/frontend/stylesheets/_modal.scss
@@ -4,7 +4,11 @@
   }
 
   > span > div:first-of-type {
-    width: 800px !important;
+    width: 100% !important;
+    max-width: 800px;
+    min-width: 500px;
+    max-height: 100%;
+    overflow-y: scroll;
   }
 
   .modal-content {
