--- a/frontend/stylesheets/configuration.scss
+++ b/frontend/stylesheets/configuration.scss
@@ -69,9 +69,10 @@
 
       > li {
         font-size: 16px;
+        font-weight: 500;
         display: table;
         border-radius: 5px;
-        padding: 5px;
+        padding: 5px 10px;
         cursor: pointer;
 
         &:hover {
@@ -88,6 +89,10 @@
           &.uninvited {
             color: #FFC202;
           }
+        }
+
+        > span.description {
+          font-weight: normal;
         }
       }
     }
