--- a/frontend/stylesheets/index.scss
+++ b/frontend/stylesheets/index.scss
@@ -14,7 +14,7 @@ body {
   margin: 0;
   font: 14px Helvetica Neue, Helvetica, Arial, sans-serif;
 
-  &.opened-modal {
+  &.modal-opened {
     overflow: hidden;
   }
 }
