--- a/public/bundles/stylesheet.bundle.css
+++ b/public/bundles/stylesheet.bundle.css
@@ -2220,7 +2220,7 @@ footer {
 
 #landing-container > section.top {
   position: relative;
-  padding: 30px;
+  padding: 30px 30px 40px 30px;
   color: #FFFFFF;
   z-index: 1; }
   #landing-container > section.top > .bg {
@@ -2331,7 +2331,7 @@ footer {
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   background-color: #FFFFFF;
-  padding: 30px; }
+  padding: 40px 30px 30px 30px; }
   #landing-container > section.features > .slack-window {
     margin: 0 30px 10px 0;
     width: 577.3913px;
@@ -2371,7 +2371,7 @@ footer {
   -webkit-align-items: center;
   -moz-align-items: center;
   align-items: center;
-  padding: 50px 30px 30px 30px;
+  padding: 50px 30px 40px 30px;
   color: #FFFFFF; }
   #landing-container > section.bottom a {
     color: #FFFFFF; }
