--- a/frontend/stylesheets/configuration.scss
+++ b/frontend/stylesheets/configuration.scss
@@ -68,31 +68,39 @@
       margin-bottom: 20px;
 
       > li {
-        font-size: 16px;
-        font-weight: 500;
-        display: table;
-        border-radius: 5px;
-        padding: 5px 10px;
-        cursor: pointer;
-
-        &:hover {
-          background-color: #F6F5F2;
+        &:not(:last-child) {
+          margin-bottom: 10px;
         }
 
-        > i {
-          margin-right: 10px;
-          color: $primary-gray;
+        > a {
+          font-size: 16px;
+          font-weight: 500;
+          border-radius: 5px;
+          padding: 5px 10px;
+          color: inherit;
+          text-decoration: none;
 
-          &.invited {
-            color: $primary-green;
+          &:hover {
+            background-color: #F6F5F2;
           }
-          &.uninvited {
-            color: #FFC202;
+
+          > i {
+            margin-right: 10px;
+            color: $primary-gray;
+
+            &.invited {
+              color: $primary-green;
+            }
+            &.uninvited {
+              color: #FFC202;
+            }
           }
         }
 
         > span.description {
-          font-weight: normal;
+          display: block;
+          font-size: 14px;
+          padding-left: 35px;
         }
       }
     }
