--- a/public/bundles/stylesheet.bundle.css
+++ b/public/bundles/stylesheet.bundle.css
@@ -2077,47 +2077,41 @@
   content: "\F295"; }
 
 body {
+  font: 14px Helvetica Neue, Helvetica, Arial, sans-serif;
   display: block;
-  margin: 0;
-  font: 14px Helvetica Neue, Helvetica, Arial, sans-serif; }
+  margin: 0; }
   body.modal-opened {
     overflow: hidden; }
-
-main {
-  min-width: 800px; }
-
-h1 {
-  margin: 0;
-  font-weight: normal; }
-
-a {
-  color: #00B7FF; }
-
-ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  line-height: 1.5em; }
-
-p {
-  margin: 0;
-  line-height: 1.5em; }
-
-div.container {
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-flex-direction: column;
-  -moz-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  min-height: 100vh; }
-  div.container > .content {
-    -webkit-flex: 1;
-    -moz-flex: 1;
-    -ms-flex: 1;
-    flex: 1; }
+  body main {
+    min-width: 800px; }
+    body main > div.container {
+      display: -webkit-flex;
+      display: -moz-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-flex-direction: column;
+      -moz-flex-direction: column;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      min-height: 100vh; }
+      body main > div.container > .content {
+        -webkit-flex: 1;
+        -moz-flex: 1;
+        -ms-flex: 1;
+        flex: 1; }
+    body main h1 {
+      margin: 0;
+      font-weight: normal; }
+    body main a {
+      color: #00B7FF; }
+    body main ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      line-height: 1.5em; }
+    body main p {
+      margin: 0;
+      line-height: 1.5em; }
 
 button.msi {
   padding: 15px 20px;
