--- a/frontend/stylesheets/_slack_button.scss
+++ b/frontend/stylesheets/_slack_button.scss
@@ -10,6 +10,17 @@
   font-size: 22px;
   padding: 10px 15px;
 
+  &.small {
+    font-size: 16px;
+    padding: 8px 8px;
+
+    > i {
+      width: 25px;
+      height: 24px;
+      margin-right: 5px;
+    }
+  }
+
   > i {
     background-image: url('/images/slack-logo@2x.png');
     background-size: cover;
