--- a/public/bundles/stylesheet.bundle.css
+++ b/public/bundles/stylesheet.bundle.css
@@ -2473,8 +2473,19 @@ footer {
           color: #FFC202; }
     .container.configuration > .content .channels-list > li > span.description {
       display: block;
-      font-size: 14px;
       padding-left: 35px; }
+  .container.configuration > .content .intergation-test {
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    -moz-align-items: center;
+    align-items: center; }
+    .container.configuration > .content .intergation-test > .status {
+      margin-left: 30px;
+      width: 300px; }
   .container.configuration > .content .themes-list > h1 {
     text-align: center;
     margin-bottom: 20px; }
