--- a/frontend/stylesheets/_header.scss
+++ b/frontend/stylesheets/_header.scss
@@ -13,6 +13,8 @@ header.main {
     @include align-items(center);
 
     font-weight: 200;
+    color: inherit;
+    text-decoration: none;
 
     strong {
       font-weight: 500;
