--- a/public/bundles/stylesheet.bundle.css
+++ b/public/bundles/stylesheet.bundle.css
@@ -2154,7 +2154,9 @@ header.main {
     -webkit-align-items: center;
     -moz-align-items: center;
     align-items: center;
-    font-weight: 200; }
+    font-weight: 200;
+    color: inherit;
+    text-decoration: none; }
     header.main > .logo strong {
       font-weight: 500; }
     header.main > .logo > .main-logo {
@@ -2186,6 +2188,9 @@ footer {
     footer > ul > li > a {
       color: #CBD0CD;
       text-decoration: none; }
+
+div.container footer {
+  border-top: 1px solid #CBD0CD; }
 
 #modal.hidden {
   display: none; }
@@ -2535,5 +2540,7 @@ footer {
     -moz-justify-content: flex-end;
     justify-content: flex-end; }
 
-.container.configuration > footer {
-  border-top: 1px solid #CBD0CD; }
+.container.pages > .content {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 30px; }
