--- a/views/landing.jade
+++ b/views/landing.jade
@@ -1,5 +1,8 @@
 extends layout
 
+block meta
+  meta(name="google-site-verification" content="vIQZV2CkEmTs49AGhr3NrlNhHCGZmBp0l9ggZbo77Uo")
+
 block content
   main(
     data-react-class="LandingApp"
