--- a/views/admin/team_users.jade
+++ b/views/admin/team_users.jade
@@ -1,1 +1,15 @@
 div Hello World
+
+//- extends ../layout
+
+//- block content
+//-   main(
+//-     data-react-class="TeamUsersApp"
+//-   )
+
+//- block pagescript
+//-   script(type="text/javascript").
+//-     window.__INITIAL_STATE__ = {
+//-       team: !{JSON.stringify(team)},
+//-       users: !{JSON.stringify(users)}
+//-     }
