created UsersList component

--- a/views/admin/team_users.jade
+++ b/views/admin/team_users.jade
@@ -2,7 +2,7 @@ extends ../layout
 
 block content
   main(
-    data-react-class="TeamUsersApp"
+    data-react-class="UsersApp"
   )
 
 block pagescript
